# BattleshipTG

./: .gitignore  CMakeLists.txt  README.md
battleship-ui/: index.html  package-lock.json  package.json
battleship-ui/src/: App.jsx  index.css
battleship-ui/src/api/: gameApi.js
battleship-ui/src/components/: Board.css  Board.jsx  Cell.css  Cell.jsx  Grid.jsx
include/: Board.hpp  Cell.hpp  Game.hpp  Player.hpp  Point.hpp  TelegramBot.hpp  test.h
src/: Board.cpp  Game.cpp  Player.cpp  TelegramBot.cpp  main.cpp
